// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionHeader - Rendering should render a rotated down Arrow if isExpanded is true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 24,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
  testID="accordionheader"
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#4459ff",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
    testID="accordionheader-title"
  >
    Sample Accordion Header Title
  </Text>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "rotate": "180deg",
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "marginLeft": 4,
        },
        {
          "initial": {
            "updater": [Function],
            "value": {
              "transform": [
                {
                  "rotate": "180deg",
                },
              ],
            },
          },
          "jestAnimatedValues": {
            "current": {
              "value": {
                "transform": [
                  {
                    "rotate": "180deg",
                  },
                ],
              },
            },
          },
          "viewDescriptors": {
            "add": [Function],
            "remove": [Function],
            "shareableViewDescriptors": "SharedValue(<circular>)",
          },
        },
      ]
    }
    style={
      [
        {
          "marginLeft": 4,
        },
        {
          "transform": [
            {
              "rotate": "180deg",
            },
          ],
        },
      ]
    }
    testID="accordionheader-arrow-icon-animation"
  >
    <SvgMock
      color="#4459ff"
      fill="currentColor"
      height={16}
      name="ArrowDown"
      style={
        {
          "height": 16,
          "width": 16,
        }
      }
      testID="accordionheader-arrow-icon"
      width={16}
    />
  </View>
</View>
`;

exports[`AccordionHeader - Rendering should render default settings correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 24,
      "justifyContent": "center",
      "opacity": 1,
    }
  }
  testID="accordionheader"
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#4459ff",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
    testID="accordionheader-title"
  >
    Sample Accordion Header Title
  </Text>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "rotate": "0deg",
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "marginLeft": 4,
        },
        {
          "initial": {
            "updater": [Function],
            "value": {
              "transform": [
                {
                  "rotate": "0deg",
                },
              ],
            },
          },
          "jestAnimatedValues": {
            "current": {
              "value": {
                "transform": [
                  {
                    "rotate": "0deg",
                  },
                ],
              },
            },
          },
          "viewDescriptors": {
            "add": [Function],
            "remove": [Function],
            "shareableViewDescriptors": "SharedValue(<circular>)",
          },
        },
      ]
    }
    style={
      [
        {
          "marginLeft": 4,
        },
        {
          "transform": [
            {
              "rotate": "0deg",
            },
          ],
        },
      ]
    }
    testID="accordionheader-arrow-icon-animation"
  >
    <SvgMock
      color="#4459ff"
      fill="currentColor"
      height={16}
      name="ArrowDown"
      style={
        {
          "height": 16,
          "width": 16,
        }
      }
      testID="accordionheader-arrow-icon"
      width={16}
    />
  </View>
</View>
`;
